Show cube's up face on screen

--- a/index.html
+++ b/index.html
@@ -15,13 +15,33 @@
 
         for (var i = 0; i < 3 ; i++) {
           for (var j = 0; j < 3 ; j++) {
+            //SHOW FRONT FACE
             ctx.fillStyle = "rgb(0,0,0)";
             ctx.fillRect (500 + 100 * i, 300 + 100 * j, 99, 99);
-
             ctx.fillStyle = cube.colors[cube.front[j][i]];
             ctx.fillRect (503 + 100 * i, 303 + 100 * j, 93, 93);
+
+            //SHOW TOP FACE
+            ctx.fillStyle = "rgb(0,0,0)";
+            ctx.beginPath();
+            ctx.moveTo(500 + 100 * i + 50 * j, 298 - 41 * j);
+            ctx.lineTo(550 + 100 * i + 50 * j, 258 - 41 * j);
+            ctx.lineTo(647 + 100 * i + 50 * j, 258 - 41 * j);
+            ctx.lineTo(598 + 100 * i + 50 * j, 298 - 41 * j);
+            ctx.closePath();
+            ctx.fill();
+
+            ctx.fillStyle = cube.colors[cube.up[j][i]];
+            ctx.beginPath();
+            ctx.moveTo(508 + 100 * i + 50 * j, 295 - 41 * j);
+            ctx.lineTo(553 + 100 * i + 50 * j, 260 - 41 * j);
+            ctx.lineTo(640 + 100 * i + 50 * j, 260 - 41 * j);
+            ctx.lineTo(596 + 100 * i + 50 * j, 295 - 41 * j);
+            ctx.closePath();
+            ctx.fill();
           }
         }
+
       }
     }
   </script>
