--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
             ctx.closePath();
             ctx.fill();
 
-            // ctx.beginPath();
-            // ctx.moveTo(800 + 100 * i + 50 * j, 295 + 41 * j);
-            // ctx.lineTo(841 + 100 * i + 50 * j, 260 + 41 * j);
-            // ctx.lineTo(841 + 100 * i + 50 * j, 260 + 41 * j);
-            // ctx.lineTo(800 + 100 * i + 50 * j, 295 + 41 * j);
-            // ctx.closePath();
-            // ctx.fill();
+            ctx.fillStyle = cube.colors[cube.right[i][j]];
+            ctx.beginPath();
+            ctx.moveTo(805 + 48 * j, 302 + 100 * i - 40 * j);
+            ctx.lineTo(844 + 48 * j, 270 + 100 * i - 40 * j);
+            ctx.lineTo(844 + 48 * j, 357 + 100 * i - 40 * j);
+            ctx.lineTo(805 + 48 * j, 390 + 100 * i - 40 * j);
+            ctx.closePath();
+            ctx.fill();
           }
         }
       }
