--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
         for (var i = 0; i < 3 ; i++) {
           for (var j = 0; j < 3 ; j++) {
-            debugger
             //SHOW FRONT FACE
             ctx.fillStyle = "rgb(0,0,0)";
             ctx.fillRect (500 + 100 * i, 300 + 100 * j, 99, 99);
-            ctx.fillStyle = cube.colors[cube.front[j][i]];
+            ctx.fillStyle = cube.colors[cube.currentFront[j][i]];
             ctx.fillRect (503 + 100 * i, 303 + 100 * j, 93, 93);
 
             //SHOW TOP FACE
@@ -32,7 +31,7 @@
             ctx.closePath();
             ctx.fill();
 
-            ctx.fillStyle = cube.colors[cube.up[2 - j][i]];
+            ctx.fillStyle = cube.colors[cube.currentUp[2 - j][i]];
             ctx.beginPath();
             ctx.moveTo(508 + 100 * i + 50 * j, 295 - 41 * j);
             ctx.lineTo(553 + 100 * i + 50 * j, 260 - 41 * j);
@@ -44,19 +43,19 @@
             //SHOW RIGHT FACE
             ctx.fillStyle = "rgb(0,0,0)";
             ctx.beginPath();
-            ctx.moveTo(801 + 48 * j, 300 + 100 * i - 40 * j);
-            ctx.lineTo(847 + 48 * j, 262 + 100 * i - 40 * j);
-            ctx.lineTo(847 + 48 * j, 360 + 100 * i - 40 * j);
-            ctx.lineTo(801 + 48 * j, 398 + 100 * i - 40 * j);
+            ctx.moveTo(801 + 50 * j, 300 + 100 * i - 41 * j);
+            ctx.lineTo(847 + 50 * j, 262 + 100 * i - 41 * j);
+            ctx.lineTo(847 + 50 * j, 360 + 100 * i - 41 * j);
+            ctx.lineTo(801 + 50 * j, 398 + 100 * i - 41 * j);
             ctx.closePath();
             ctx.fill();
 
-            ctx.fillStyle = cube.colors[cube.right[i][j]];
+            ctx.fillStyle = cube.colors[cube.currentRight[i][j]];
             ctx.beginPath();
-            ctx.moveTo(805 + 48 * j, 302 + 100 * i - 40 * j);
-            ctx.lineTo(844 + 48 * j, 270 + 100 * i - 40 * j);
-            ctx.lineTo(844 + 48 * j, 357 + 100 * i - 40 * j);
-            ctx.lineTo(805 + 48 * j, 390 + 100 * i - 40 * j);
+            ctx.moveTo(805 + 50 * j, 302 + 100 * i - 41 * j);
+            ctx.lineTo(844 + 50 * j, 270 + 100 * i - 41 * j);
+            ctx.lineTo(844 + 50 * j, 357 + 100 * i - 41 * j);
+            ctx.lineTo(805 + 50 * j, 390 + 100 * i - 41 * j);
             ctx.closePath();
             ctx.fill();
           }
