--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
       if (canvas.getContext) {
         var ctx = canvas.getContext("2d");
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
 
         for (var i = 0; i < 3 ; i++) {
           for (var j = 0; j < 3 ; j++) {
