--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         var ctx = canvas.getContext("2d");
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+        ctx.font = "50px Arial";
+        ctx.fillStyle = "black";
+        ctx.textAlign = "center";
+        ctx.fillText("Rubik's Cube", canvas.width/2, 100);
+
         for (var i = 0; i < 3 ; i++) {
           for (var j = 0; j < 3 ; j++) {
             //SHOW FRONT FACE
