--- a/test.html
+++ b/test.html
@@ -1,36 +1,94 @@
-<html>
- <head>
-   <title>My first Three.js app</title>
-    <style> body { margin: 0; } canvas { width: 100%; height: 100% } </style>
-</head>
-  <body>
-    <script src="three.min.js"></script>
-    <script>
-      var scene = new THREE.Scene();
-      var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-      var renderer = new THREE.WebGLRenderer();
-      renderer.setSize( window.innerWidth, window.innerHeight );
-      document.body.appendChild( renderer.domElement );
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>three.js webgl - geometry - cube</title>
+		<meta charset="utf-8">
+		<style>
+			body {
+				margin: 0px;
+				background-color: #000000;
+				overflow: hidden;
+			}
+		</style>
+	</head>
+	<body>
 
-      var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-      var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
-      var cube = new THREE.Mesh( geometry, material );
-      cube.position.z = 5;
-      cube.rotation.x = .3;
-      cube.rotation.y = -.2;
-      cube.lookAt(scene.position);
+		<script src="./three.min.js"></script>
 
-      scene.add( cube );
-      camera.position.z = 10;
-      function render() {
-        requestAnimationFrame( render );
-        // cube.rotation.x += .01;
-        // cube.rotation.y += .01;
-        // cube.rotation.z += .01;
+		<script>
 
-        renderer.render( scene, camera );
-      }
-      render();
-    </script>
-  </body>
+			var camera, scene, renderer;
+			var mesh;
+      var cubes = [];
+
+			init();
+			animate();
+
+			function init() {
+
+				renderer = new THREE.WebGLRenderer();
+				renderer.setPixelRatio( window.devicePixelRatio );
+				renderer.setSize( window.innerWidth, window.innerHeight );
+				document.body.appendChild( renderer.domElement );
+
+				//
+
+				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000 );
+				camera.position.z = 400;
+
+				scene = new THREE.Scene();
+
+        for (var j = 0; j < 9; j++) {
+  				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
+
+          for ( var i = 0; i < geometry.faces.length; i ++ ) {
+            geometry.faces[ i ].color.setHex( Math.random() * 0xffffff );
+          }
+
+
+
+
+  				// var texture = THREE.ImageUtils.loadTexture( 'textures/crate.gif' );
+  				// texture.anisotropy = renderer.getMaxAnisotropy();
+
+  				// var material = new THREE.MeshBasicMaterial();
+          var material = new THREE.MeshBasicMaterial( { color: 0xffffff, vertexColors: THREE.FaceColors } );
+
+  				mesh = new THREE.Mesh( geometry, material );
+          mesh.position.set(100 -100 * ~~(j / 3), 100 -100 * (j % 3), 10);
+          cubes.push(mesh);
+
+
+  				scene.add( mesh );
+        }
+
+				//
+
+				window.addEventListener( 'resize', onWindowResize, false );
+
+			}
+
+			function onWindowResize() {
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			function animate() {
+
+				requestAnimationFrame( animate );
+
+				// mesh.rotation.x += 0.005;
+				// mesh.rotation.y += 0.01;
+
+				renderer.render( scene, camera );
+
+			}
+
+		</script>
+
+	</body>
 </html>
