--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 
 		<script>
 
-			var camera, scene, renderer;
+			var camera, scene, group, renderer;
 			var mesh;
       var cubes = [];
 
@@ -34,9 +34,11 @@
 				//
 
 				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.z = 400;
+				camera.position.z = 600;
+				// camera.rotation.y = .1;
 
 				scene = new THREE.Scene();
+				group = new THREE.Object3D();
 
         for (var j = 0; j < 9; j++) {
   				var geometry = new THREE.BoxGeometry( 100, 100, 100 );
@@ -44,25 +46,36 @@
           for ( var i = 0; i < geometry.faces.length; i ++ ) {
             geometry.faces[ i ].color.setHex( Math.random() * 0xffffff );
           }
+					geometry.faces[0].color.setRGB(255,0,0);
+					geometry.faces[1].color.setRGB(255,0,0);
 
+					geometry.faces[4].color.setRGB(255,255,0);
+					geometry.faces[5].color.setRGB(255,255,0);
 
-
+					geometry.faces[8].color.setRGB(0,0,255);
+					geometry.faces[9].color.setRGB(0,0,255);
 
   				// var texture = THREE.ImageUtils.loadTexture( 'textures/crate.gif' );
   				// texture.anisotropy = renderer.getMaxAnisotropy();
-
   				// var material = new THREE.MeshBasicMaterial();
-          var material = new THREE.MeshBasicMaterial( { color: 0xffffff, vertexColors: THREE.FaceColors } );
-
-  				mesh = new THREE.Mesh( geometry, material );
-          mesh.position.set(100 -100 * ~~(j / 3), 100 -100 * (j % 3), 10);
-          cubes.push(mesh);
 
 
-  				scene.add( mesh );
+					for (var k = 0; k < 3; k++) {
+	          var material = new THREE.MeshBasicMaterial( { color: 0xffffff, vertexColors: THREE.FaceColors } );
+
+	  				mesh = new THREE.Mesh( geometry, material );
+	          mesh.position.set(-100 * ~~(j / 3), 100 -100 * (j % 3), 100 - 100 * k);
+	          cubes.push(mesh);
+
+
+	  				group.add( mesh );
+					}
         }
 
-				//
+				group.rotation.y = -.45;
+				group.rotation.x = .4;
+				group.rotation.z = -.1;
+				scene.add(group);
 
 				window.addEventListener( 'resize', onWindowResize, false );
 
