--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       var canvas = document.getElementById("canvas");
       var cube = new Game.Cube();
       var game = new Game.Game(canvas, cube);
-      var eventHandler = new Game.EventHandler(cube, game);
+      var eventHandler = new Game.event_handler(cube, game);
       game.draw();
     }
   </script>
