--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <meta charset="utf-8"/>
   <script type="application/javascript" src="cube.js"></script>
   <script type="application/javascript" src="game.js"></script>
-  <script type="application/javascript" src="eventHandler.js"></script>
+  <script type="application/javascript" src="event_handler.js"></script>
 
   <script type="application/javascript">
     function init () {
       var canvas = document.getElementById("canvas");
       var cube = new Game.Cube();
       var game = new Game.Game(canvas, cube);
-      var eventHandler = new Game.event_handler(cube, game);
+      var eventHandler = new Game.EventHandler(cube, game);
       game.draw();
     }
   </script>
